@@ -1,4 +1,4 @@
-Copyright © 2009 Johan Kiviniemi
+Copyright © 2010 Johan Kiviniemi
 
 Permission to use, copy, modify, and/or distribute this software for any
 purpose with or without fee is hereby granted, provided that the above
