@@ -103,7 +103,7 @@ ever use an untrusted variable as a command.
 
 == LICENSE:
 
-Copyright © 2009 Johan Kiviniemi
+Copyright © 2010 Johan Kiviniemi
 
 Permission to use, copy, modify, and/or distribute this software for any
 purpose with or without fee is hereby granted, provided that the above
